fix: some clippy err and remove unwrap
Signed-off-by: Sacha Froment <sfroment42@gmail.com>

fix: some clippy err and remove unwrap

Signed-off-by: Sacha Froment <sfroment42@gmail.com>

--- a/crates/json-rpc/Cargo.toml
+++ b/crates/json-rpc/Cargo.toml
@@ -16,3 +16,4 @@ tokio-stream = { workspace = true }
 tower = "0.4"
 tower-http = { version = "0.6", features = ["cors"] }
 trait-variant = { workspace = true }
+tracing = { workspace = true }
