--- a/crates/node/Cargo.toml
+++ b/crates/node/Cargo.toml
@@ -19,4 +19,6 @@ tokio = { workspace = true, features = ["full"] }
 tokio-stream = "0.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
-clap = { version = "4.5", features = ["derive"] }
+
+# misc 
+thiserror.workspace = true
