--- a/crates/node/Cargo.toml
+++ b/crates/node/Cargo.toml
@@ -21,5 +21,5 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 
 # misc 
-thiserror.workspace = true
-clap = { version = "4.5", features = ["derive"] }
+thiserror = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
