--- a/crates/subscriber/Cargo.toml
+++ b/crates/subscriber/Cargo.toml
@@ -8,4 +8,6 @@ alloy = { version = "0.12", features = ["full"] }
 futures = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 
-tracing.workspace = true
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
