--- a/crates/json-rpc/Cargo.toml
+++ b/crates/json-rpc/Cargo.toml
@@ -16,6 +16,8 @@ tokio-stream = { workspace = true }
 tower = "0.4"
 tower-http = { version = "0.6", features = ["cors"] }
 
+alloy-network ={ version = "0.19" }
+
 # misc
 tracing = { workspace = true }
 trait-variant = { workspace = true }
