chore: use ethrex args
Signed-off-by: Sacha Froment <sfroment42@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ clap = { version = "4.5", features = ["derive"] }
 # error handling
 thiserror = "2"
 anyhow = { version = "1.0" }
+
+# ethrex
+ethrex = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
