--- a/cmd/mojave/Cargo.toml
+++ b/cmd/mojave/Cargo.toml
@@ -14,11 +14,16 @@ path = "./lib.rs"
 [dependencies]
 mojave-chain-full-node = { workspace = true }
 mojave-chain-json-rpc = { workspace = true }
+mojave-chain-utils = { workspace = true }
 
 tokio = { workspace = true, features = ["full"] }
 
 # ethrex
 ethrex = { workspace = true }
+ethrex-vm = { workspace = true }
+ethrex-storage = { workspace = true }
+ethrex-p2p = { workspace = true }
+ethrex-common = { workspace = true }
 
 # logging
 tracing = { workspace = true }
