--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ mojave-chain-full-node = { path = "crates/full-node" }
 mojave-chain-utils = { path = "crates/utils" }
 
 tokio = { version = "1", default-features = false }
+tokio-util = { version = "0.7", default-features = false }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 trait-variant = "0.1"
@@ -18,12 +19,33 @@ thiserror = "2"
 anyhow = { version = "1.0" }
 
 # ethrex
-ethrex = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
-ethrex-vm = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
-ethrex-storage = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
-ethrex-storage-rollup = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
-ethrex-l2 = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
-ethrex-p2p = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
-ethrex-common = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
-ethrex-rpc = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
-ethrex-blockchain = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
+ethrex = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f", features = [
+  "l2",
+] }
+ethrex-vm = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f", features = [
+  "l2",
+] }
+ethrex-storage = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f" }
+ethrex-storage-rollup = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f", features = [
+  "l2",
+] }
+ethrex-l2 = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f", features = [
+  "l2",
+] }
+ethrex-p2p = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f" }
+ethrex-common = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f" }
+ethrex-rpc = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f", features = [
+  "l2",
+] }
+ethrex-blockchain = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f", features = [
+  "l2",
+] }
+
+secp256k1 = { version = "0.29.1", default-features = false, features = [
+  "global-context",
+  "recovery",
+  "rand",
+] }
+
+[patch.crates-io]
+secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-5.0.0" }
