--- a/cmd/mojave/Cargo.toml
+++ b/cmd/mojave/Cargo.toml
@@ -16,14 +16,23 @@ mojave-chain-full-node = { workspace = true }
 mojave-chain-json-rpc = { workspace = true }
 mojave-chain-utils = { workspace = true }
 
+tokio-util = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
+
+local-ip-address = { version = "0.6" }
+
+k256 = { version = "0.13.3", features = ["ecdh"] }
+secp256k1 = { workspace = true }
 
 # ethrex
 ethrex = { workspace = true }
+ethrex-rpc = { workspace = true }
 ethrex-vm = { workspace = true }
 ethrex-storage = { workspace = true }
 ethrex-p2p = { workspace = true }
 ethrex-common = { workspace = true }
+ethrex-blockchain = { workspace = true }
+ethrex-storage-rollup = { workspace = true }
 
 # logging
 tracing = { workspace = true }
