--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,12 @@ tracing-subscriber = "0.3"
 trait-variant = "0.1"
 clap = { version = "4.5", features = ["derive"] }
 
+serde_json = "1.0"
+
 # error handling
 thiserror = "2"
 anyhow = { version = "1.0" }
+lazy_static = "1.5.0"
 
 # ethrex
 ethrex = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f", features = [
@@ -40,6 +43,10 @@ ethrex-rpc = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d28569
 ethrex-blockchain = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f", features = [
   "l2",
 ] }
+ethrex-metrics = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f", features = [
+  "l2",
+] }
+
 
 secp256k1 = { version = "0.29.1", default-features = false, features = [
   "global-context",
