--- a/cmd/mojave/Cargo.toml
+++ b/cmd/mojave/Cargo.toml
@@ -24,6 +24,10 @@ local-ip-address = { version = "0.6" }
 k256 = { version = "0.13.3", features = ["ecdh"] }
 secp256k1 = { workspace = true }
 
+lazy_static = { workspace = true }
+
+serde_json = { workspace = true }
+
 # ethrex
 ethrex = { workspace = true }
 ethrex-rpc = { workspace = true }
@@ -31,8 +35,10 @@ ethrex-vm = { workspace = true }
 ethrex-storage = { workspace = true }
 ethrex-p2p = { workspace = true }
 ethrex-common = { workspace = true }
+ethrex-l2 = { workspace = true }
 ethrex-blockchain = { workspace = true }
 ethrex-storage-rollup = { workspace = true }
+ethrex-metrics = { workspace = true }
 
 # logging
 tracing = { workspace = true }
@@ -41,3 +47,7 @@ tracing-subscriber = { workspace = true, features = ["env-filter"] }
 # misc
 clap = { workspace = true, features = ["derive", "env", "string"] }
 anyhow = { workspace = true }
+
+[features]
+default = []
+metrics = ["ethrex-blockchain/metrics", "ethrex-l2/metrics"]
