--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -70,4 +70,4 @@ jobs:
         uses: Swatinem/rust-cache@v2
 
       - name: Run cargo clippy
-        run: cargo clippy --all-targets --all-features --workspace -- -D warnings
+        run: cargo clippy --all-targets --workspace -- -D warnings
