chore: add initializer file
Signed-off-by: Sacha Froment <sfroment42@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["cmd/mojave", "crates/full-node", "crates/json-rpc", "crates/utils"]
+members = ["cmd/mojave", "crates/utils"]
 resolver = "2"
 
 [workspace.dependencies]
