--- a/crates/networking/Cargo.toml
+++ b/crates/networking/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.1"
+hex = "0.4.3"
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
