--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,6 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
-anyhow = { version = "1.0" }
-clap = { version = "4.5", features = ["derive"] }
-
 # ethrex
 ethrex = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f", default-features = false }
 ethrex-blockchain = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f", default-features = false }
@@ -27,15 +24,17 @@ ethrex-common = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d28
 ethrex-p2p = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f" }
 ethrex-storage = { git = "https://github.com/1sixtech/ethrex", rev = "5a39b693d285690b479657d69b0939f03bd5075f" }
 lazy_static = "1.5.0"
+
+# mojave
+mojave-block-builder = { path = "crates/block-builder" }
 mojave-chain-utils = { path = "crates/utils" }
+mojave-networking = { path = "crates/networking" }
 
+anyhow = { version = "1.0" }
+clap = { version = "4.5", features = ["derive"] }
 secp256k1 = { version = "0.29.1", default-features = false }
-
 serde_json = "1.0"
-
-# error handling
 thiserror = "2"
-
 tokio = { version = "1", default-features = false }
 tokio-stream = { version = "0.1.17" }
 tokio-util = { version = "0.7", default-features = false }
