--- a/cmd/mojave/Cargo.toml
+++ b/cmd/mojave/Cargo.toml
@@ -14,23 +14,29 @@ path = "./mojave.rs"
 [features]
 default = []
 metrics = ["ethrex-blockchain/metrics", "ethrex-l2/metrics", "ethrex/metrics"]
+sql = ["ethrex/rollup_storage_sql"]
+redb = ["ethrex/rollup_storage_redb"]
+libmdbx = ["ethrex/rollup_storage_libmdbx"]
 
 [dependencies]
+# ours
 mojave-chain-utils = { workspace = true }
+mojave-networking = { workspace = true }
 
 anyhow = { workspace = true }
 
 # misc
 clap = { workspace = true, features = ["derive", "env", "string"] }
+cfg-if = "1.0"
 
 # ethrex
 ethrex = { workspace = true, features = ["libmdbx", "c-kzg", "blst", "l2"] }
 ethrex-blockchain = { workspace = true, features = ["l2"] }
 ethrex-l2 = { workspace = true, features = ["l2"] }
 ethrex-metrics = { workspace = true, features = ["l2"] }
-ethrex-rpc = { workspace = true, features = ["l2"] }
+ethrex-rpc = { workspace = true }
 ethrex-storage-rollup = { workspace = true, features = ["l2"] }
-ethrex-vm = { workspace = true, features = ["l2"] }
+ethrex-vm = { workspace = true }
 ethrex-common = { workspace = true }
 ethrex-p2p = { workspace = true }
 ethrex-storage = { workspace = true }
