--- a/crates/block-builder/Cargo.toml
+++ b/crates/block-builder/Cargo.toml
@@ -10,15 +10,11 @@ tokio-stream = { workspace = true }
 tracing = { workspace = true }
 
 # ethrex
-ethrex-blockchain = { git = "https://github.com/1sixtech/ethrex", rev = "3f65132f7fb6d206f189754ace88340184811e7d" }
-ethrex-common = { git = "https://github.com/1sixtech/ethrex", rev = "3f65132f7fb6d206f189754ace88340184811e7d", features = [
-    "c-kzg",
-] }
-ethrex-l2-common = { git = "https://github.com/1sixtech/ethrex", rev = "3f65132f7fb6d206f189754ace88340184811e7d" }
-ethrex-metrics = { git = "https://github.com/1sixtech/ethrex", rev = "3f65132f7fb6d206f189754ace88340184811e7d", features = [
-    "metrics",
-] }
-ethrex-rpc = { git = "https://github.com/1sixtech/ethrex", rev = "3f65132f7fb6d206f189754ace88340184811e7d" }
-ethrex-storage = { git = "https://github.com/1sixtech/ethrex", rev = "3f65132f7fb6d206f189754ace88340184811e7d" }
-ethrex-storage-rollup = { git = "https://github.com/1sixtech/ethrex", rev = "3f65132f7fb6d206f189754ace88340184811e7d" }
-ethrex-vm = { git = "https://github.com/1sixtech/ethrex", rev = "3f65132f7fb6d206f189754ace88340184811e7d" }
+ethrex-blockchain = { workspace = true }
+ethrex-common = { workspace = true, features = ["c-kzg"] }
+ethrex-l2-common = { workspace = true }
+ethrex-metrics = { workspace = true, features = ["metrics"] }
+ethrex-rpc = { workspace = true }
+ethrex-storage = { workspace = true }
+ethrex-storage-rollup = { workspace = true }
+ethrex-vm = { workspace = true }
