feat: add full_node_options and add a mode tot the sync client
Signed-off-by: Sacha Froment <sfroment42@gmail.com>

--- a/crates/networking/Cargo.toml
+++ b/crates/networking/Cargo.toml
@@ -3,6 +3,11 @@ name = "mojave-networking"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = ["sequencer"]
+full = []
+sequencer = []
+
 [dependencies]
 axum = "0.8.1"
 hex = "0.4.3"
