--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ mojave-networking = { path = "crates/networking" }
 anyhow = { version = "1.0" }
 clap = { version = "4.5", features = ["derive"] }
 secp256k1 = { version = "0.29.1", default-features = false }
+serde = { version = "1.0", default-features = false }
 serde_json = "1.0"
 thiserror = "2"
 tokio = { version = "1", default-features = false }
