--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,5 +44,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 trait-variant = "0.1"
 
+reqwest = { version = "0.12.7", features = ["json"] }
+
 [patch.crates-io]
 secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-5.0.0" }
