--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,9 @@ ethrex-storage-rollup = { git = "https://github.com/1sixtech/ethrex", rev = "d62
 ethrex-vm = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1", default-features = false }
 ethrex-common = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1" }
 ethrex-p2p = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1" }
+ethrex-rlp = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1" }
 ethrex-storage = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1" }
+
 lazy_static = "1.5.0"
 
 # mojave
@@ -34,10 +36,12 @@ mojave-networking = { path = "crates/networking" }
 anyhow = { version = "1.0" }
 clap = { version = "4.5", features = ["derive"] }
 secp256k1 = { version = "0.29.1", default-features = false }
+k256 = { version = "0.13.3", features = ["ecdh"] }
 serde = { version = "1.0", default-features = false }
 serde_json = "1.0"
 thiserror = "2"
 tokio = { version = "1", default-features = false }
+rand = "0.8.5"
 tokio-stream = { version = "0.1.17" }
 tokio-util = { version = "0.7", default-features = false }
 tracing = "0.1"
