--- a/cmd/mojave/Cargo.toml
+++ b/cmd/mojave/Cargo.toml
@@ -41,7 +41,7 @@ ethrex-common = { workspace = true }
 ethrex-p2p = { workspace = true }
 ethrex-storage = { workspace = true }
 
-k256 = { version = "0.13.3", features = ["ecdh"] }
+k256 = { workspace = true, features = ["ecdh"] }
 
 lazy_static = { workspace = true }
 
