--- a/crates/networking/Cargo.toml
+++ b/crates/networking/Cargo.toml
@@ -31,9 +31,12 @@ secp256k1 = { workspace = true, features = [
   "recovery",
   "rand",
 ] }
+k256 = { workspace = true, features = ["ecdh"] }
 
 reqwest = { workspace = true }
 
 
 [dev-dependencies]
 mockito = "0.31"
+ethrex-rlp = { workspace = true }
+rand.workspace = true
