feat: add queue for block received
Signed-off-by: Sacha Froment <sfroment42@gmail.com>

--- a/crates/networking/Cargo.toml
+++ b/crates/networking/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+# our
+mojave-chain-utils = { workspace = true }
+
 axum = "0.8.1"
 hex = "0.4.3"
 serde_json = { workspace = true }
