--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -3,4 +3,5 @@ name = "mojave-chain-utils"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
+[dev-dependencies]
+tokio = { workspace = true, features = ["macros", "sync", "rt", "time"] }
