--- a/crates/networking/Cargo.toml
+++ b/crates/networking/Cargo.toml
@@ -38,9 +38,10 @@ secp256k1 = { workspace = true, features = [
 k256 = { workspace = true, features = ["ecdh"] }
 
 reqwest = { workspace = true }
+ed25519-dalek = "2.1.1"
+rand = { version = "0.9.1", features = ["std"], optional = true }
 
 
 [dev-dependencies]
 mockito = "0.31"
 ethrex-rlp = { workspace = true }
-rand.workspace = true
