chore: add some just command to gen doc
Signed-off-by: Sacha Froment <sfroment42@gmail.com>

--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -7,4 +7,9 @@ edition = "2024"
 tokio = { workspace = true, features = ["signal", "sync"] }
 
 [dev-dependencies]
-tokio = { workspace = true, features = ["macros", "rt", "time"] }
+tokio = { workspace = true, features = [
+  "macros",
+  "rt",
+  "rt-multi-thread",
+  "time",
+] }
