--- a/crates/networking/Cargo.toml
+++ b/crates/networking/Cargo.toml
@@ -9,6 +9,7 @@ mojave-chain-utils = { workspace = true }
 
 axum = "0.8.1"
 hex = "0.4.3"
+futures = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
