--- a/crates/networking/Cargo.toml
+++ b/crates/networking/Cargo.toml
@@ -40,6 +40,7 @@ k256 = { workspace = true, features = ["ecdh"] }
 reqwest = { workspace = true }
 ed25519-dalek = "2.1.1"
 rand = { version = "0.8.5", features = ["std"], optional = true }
+serde_bytes = "0.11.17"
 
 
 [dev-dependencies]
