--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,8 @@ serde = { version = "1.0", default-features = false }
 serde_json = "1.0"
 thiserror = "2"
 tokio = { version = "1", default-features = false }
+rand = { version = "0.8.5", default-features = false }
+ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
 tokio-stream = { version = "0.1.17" }
 tokio-util = { version = "0.7", default-features = false }
 tracing = "0.1"
