--- a/crates/networking/Cargo.toml
+++ b/crates/networking/Cargo.toml
@@ -38,8 +38,8 @@ secp256k1 = { workspace = true, features = [
 k256 = { workspace = true, features = ["ecdh"] }
 
 reqwest = { workspace = true }
-ed25519-dalek = "2.1.1"
 rand = { version = "0.8.5", features = ["std"], optional = true }
+ed25519-dalek = { workspace = true, features = ["rand_core"] }
 serde_bytes = "0.11.17"
 
 
